@@ -1,15 +1,33 @@
 package com.yanny.age.stone.utils;
 
+import com.mojang.blaze3d.platform.GlStateManager;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.renderer.BufferBuilder;
+import net.minecraft.client.renderer.ItemRenderer;
+import net.minecraft.client.renderer.Tessellator;
+import net.minecraft.client.renderer.model.BakedQuad;
+import net.minecraft.client.renderer.model.IBakedModel;
+import net.minecraft.client.renderer.model.ItemCameraTransforms;
+import net.minecraft.client.renderer.texture.AtlasTexture;
+import net.minecraft.client.renderer.texture.TextureManager;
+import net.minecraft.client.renderer.vertex.DefaultVertexFormats;
+import net.minecraft.entity.LivingEntity;
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.crafting.Ingredient;
 import net.minecraft.nbt.CompoundNBT;
 import net.minecraft.nbt.ListNBT;
+import net.minecraft.util.Direction;
 import net.minecraft.util.NonNullList;
+import net.minecraft.util.Util;
+import net.minecraft.world.World;
 import net.minecraftforge.common.util.Constants;
 
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class ItemStackUtils {
@@ -117,6 +135,140 @@ public class ItemStackUtils {
                 output.set(index, itemStack.copy());
             }
         }
+    }
+
+    @SuppressWarnings("deprecation")
+    public static void renderItem(ItemStack stack, float alpha, ItemCameraTransforms.TransformType cameraTransformType) {
+        if (!stack.isEmpty()) {
+            IBakedModel ibakedmodel = getModelWithOverrides(stack);
+            renderItemModel(stack, ibakedmodel, cameraTransformType, alpha);
+        }
+    }
+
+    public static IBakedModel getModelWithOverrides(ItemStack stack) {
+        return getItemModelWithOverrides(stack, null, null);
+    }
+
+    public static IBakedModel getItemModelWithOverrides(ItemStack stack, @Nullable World worldIn, @Nullable LivingEntity entitylivingbaseIn) {
+        IBakedModel ibakedmodel = Minecraft.getInstance().getItemRenderer().getItemModelMesher().getItemModel(stack);
+        Item item = stack.getItem();
+        return !item.hasCustomProperties() ? ibakedmodel : getModelWithOverrides(ibakedmodel, stack, worldIn, entitylivingbaseIn);
+    }
+
+    public static void renderItem(ItemStack stack, IBakedModel model, float alpha) {
+        if (!stack.isEmpty()) {
+            GlStateManager.pushMatrix();
+            GlStateManager.translatef(-0.5F, -0.5F, -0.5F);
+            if (model.isBuiltInRenderer()) {
+                GlStateManager.color4f(1.0F, 1.0F, 1.0F, alpha);
+                GlStateManager.enableRescaleNormal();
+                stack.getItem().getTileEntityItemStackRenderer().renderByItem(stack);
+            } else {
+                renderModel(model, stack, alpha);
+                if (stack.hasEffect()) {
+                    renderEffect(Minecraft.getInstance().textureManager, () -> renderModel(model), 8);
+                }
+            }
+
+            GlStateManager.popMatrix();
+        }
+    }
+
+    public static void renderQuads(BufferBuilder renderer, List<BakedQuad> quads, int color) {
+        int i = 0;
+
+        for(int j = quads.size(); i < j; ++i) {
+            BakedQuad bakedquad = quads.get(i);
+            net.minecraftforge.client.model.pipeline.LightUtil.renderQuadColor(renderer, bakedquad, color);
+        }
+
+    }
+
+    public static void renderEffect(TextureManager textureManagerIn, Runnable renderModelFunction, int scale) {
+        GlStateManager.depthMask(false);
+        GlStateManager.depthFunc(514);
+        GlStateManager.disableLighting();
+        GlStateManager.blendFunc(GlStateManager.SourceFactor.SRC_COLOR, GlStateManager.DestFactor.ONE);
+        textureManagerIn.bindTexture(ItemRenderer.RES_ITEM_GLINT);
+        GlStateManager.matrixMode(5890);
+        GlStateManager.pushMatrix();
+        GlStateManager.scalef((float)scale, (float)scale, (float)scale);
+        float f = (float)(Util.milliTime() % 3000L) / 3000.0F / (float)scale;
+        GlStateManager.translatef(f, 0.0F, 0.0F);
+        GlStateManager.rotatef(-50.0F, 0.0F, 0.0F, 1.0F);
+        renderModelFunction.run();
+        GlStateManager.popMatrix();
+        GlStateManager.pushMatrix();
+        GlStateManager.scalef((float)scale, (float)scale, (float)scale);
+        float f1 = (float)(Util.milliTime() % 4873L) / 4873.0F / (float)scale;
+        GlStateManager.translatef(-f1, 0.0F, 0.0F);
+        GlStateManager.rotatef(10.0F, 0.0F, 0.0F, 1.0F);
+        renderModelFunction.run();
+        GlStateManager.popMatrix();
+        GlStateManager.matrixMode(5888);
+        GlStateManager.blendFunc(GlStateManager.SourceFactor.SRC_ALPHA, GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA);
+        GlStateManager.enableLighting();
+        GlStateManager.depthFunc(515);
+        GlStateManager.depthMask(true);
+        textureManagerIn.bindTexture(AtlasTexture.LOCATION_BLOCKS_TEXTURE);
+    }
+
+    @SuppressWarnings("deprecation")
+    protected static void renderItemModel(ItemStack stack, IBakedModel bakedmodel, ItemCameraTransforms.TransformType transform, float alpha) {
+        if (!stack.isEmpty()) {
+            Minecraft.getInstance().getTextureManager().bindTexture(AtlasTexture.LOCATION_BLOCKS_TEXTURE);
+            Minecraft.getInstance().getTextureManager().getTexture(AtlasTexture.LOCATION_BLOCKS_TEXTURE).setBlurMipmap(false, false);
+            GlStateManager.color4f(1.0F, 1.0F, 1.0F, alpha);
+            GlStateManager.enableRescaleNormal();
+            GlStateManager.alphaFunc(516, 0.1F);
+            GlStateManager.enableBlend();
+            GlStateManager.blendFuncSeparate(GlStateManager.SourceFactor.SRC_ALPHA, GlStateManager.DestFactor.ONE_MINUS_SRC_ALPHA, GlStateManager.SourceFactor.ONE, GlStateManager.DestFactor.ZERO);
+            GlStateManager.pushMatrix();
+
+            bakedmodel = net.minecraftforge.client.ForgeHooksClient.handleCameraTransforms(bakedmodel, transform, false);
+
+            renderItem(stack, bakedmodel, alpha);
+            GlStateManager.cullFace(GlStateManager.CullFace.BACK);
+            GlStateManager.popMatrix();
+            GlStateManager.disableRescaleNormal();
+            GlStateManager.disableBlend();
+            Minecraft.getInstance().getTextureManager().bindTexture(AtlasTexture.LOCATION_BLOCKS_TEXTURE);
+            Minecraft.getInstance().getTextureManager().getTexture(AtlasTexture.LOCATION_BLOCKS_TEXTURE).restoreLastBlurMipmap();
+        }
+    }
+
+    private static IBakedModel getModelWithOverrides(IBakedModel model, ItemStack stack, @Nullable World worldIn, @Nullable LivingEntity entityIn) {
+        IBakedModel ibakedmodel = model.getOverrides().getModelWithOverrides(model, stack, worldIn, entityIn);
+        return ibakedmodel == null ? Minecraft.getInstance().getItemRenderer().getItemModelMesher().getModelManager().getMissingModel() : ibakedmodel;
+    }
+
+    private static void renderModel(IBakedModel model, ItemStack stack, float alpha) {
+        renderModel(model, 0xffffff | (Math.round(alpha * 0xff) << 24), stack);
+    }
+
+    private static void renderModel(IBakedModel model) {
+        renderModel(model, -8372020, ItemStack.EMPTY);
+    }
+
+    @SuppressWarnings("deprecation")
+    private static void renderModel(IBakedModel model, int color, ItemStack stack) {
+        if (net.minecraftforge.common.ForgeConfig.CLIENT.allowEmissiveItems.get()) {
+            net.minecraftforge.client.ForgeHooksClient.renderLitItem(Minecraft.getInstance().getItemRenderer(), model, color, stack);
+            return;
+        }
+        Tessellator tessellator = Tessellator.getInstance();
+        BufferBuilder bufferbuilder = tessellator.getBuffer();
+        bufferbuilder.begin(7, DefaultVertexFormats.ITEM);
+        Random random = new Random();
+
+        for(Direction direction : Direction.values()) {
+            random.setSeed(42L);
+            renderQuads(bufferbuilder, model.getQuads(null, direction, random), color);
+        }
+
+        random.setSeed(42L);
+        renderQuads(bufferbuilder, model.getQuads(null, null, random), color);
+        tessellator.draw();
     }
 
     private static int getFirstFreeOrValid(ItemStack item, List<ItemStack> output, int startIndex, int endIndex) {
