@@ -1,3 +1,4 @@
+- render ghost crafting result when valid recipe available in flint workbench
 v1.0.5
 - added generated structures - abandoned camp and burial place
 - added fishing net
